--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <title>WDI Project 4: MERN Stack App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <link href="https://fastcdn.org/Animate.css/3.4.0/animate.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+
   </head>
   <body>
     <div id="app"></div>
